Исправление ошибки с тестами